--- a/src/pages/cohortsPage/style.css
+++ b/src/pages/cohortsPage/style.css
@@ -19,3 +19,15 @@
     height: 100vh;
     overflow-y: auto;
 }
+
+.cohorts-list-top{
+    background-color: white;
+}
+
+.cohorts-list-top button {
+    /* color: var(--color-blue1); */
+    font-size: 1rem !important;
+    padding-left: 15px !important;
+    text-align: center;
+    background-color: var(--color-blue5);
+}
