--- a/src/pages/allSearchResults/style.css
+++ b/src/pages/allSearchResults/style.css
@@ -24,7 +24,7 @@
 
 .search-results-container {
   margin-left: 4rem;
-  width: full;
+  width: 100%;
   overflow-y: auto;
 }
 
@@ -32,12 +32,12 @@
   width: 70%
 }
 
-.title {
+.title {  
   display: grid;
   grid-template-columns: 50px 1fr;
   justify-items: start;
   align-items: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .title h2 {
