--- a/src/pages/cohortsPage/style.css
+++ b/src/pages/cohortsPage/style.css
@@ -1,12 +1,12 @@
 .cohorts-page-container {
     display: grid;
-    grid-template-columns: auto 1fr;
     grid-template-rows: auto 1fr;
     height: 100vh;
+    width: 75%;
     background-color: #f0f5fa;
 }
 
-.cohorts-page-header {
+/* .cohorts-page-header {
     grid-column: 1 / -1;
     position: sticky;
     top: 0;
@@ -18,16 +18,20 @@
     top: 0;
     height: 100vh;
     overflow-y: auto;
-}
+} */
 
 .cohorts-list-top{
     background-color: white;
+    margin-bottom: 1px;
+    border: 1px #e6ebf5 solid;
+    border-radius: 8px;
 }
 
 .cohorts-list-top button {
-    /* color: var(--color-blue1); */
-    font-size: 1rem !important;
-    padding-left: 15px !important;
+    margin-left: 0.5rem;;
+    font-size: 1rem;
+    padding-left: 15px;
     text-align: center;
-    background-color: var(--color-blue5);
+    background-color: #f0f5fa;
 }
+
